Bump the gradle group with 21 updates
Bumps the gradle group with 21 updates:

| Package | From | To |
| --- | --- | --- |
| [org.jetbrains.kotlin:compose-compiler-gradle-plugin](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin:kotlin-gradle-plugin](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.plugin.compose](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.jvm](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.multiplatform](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.kotlin.plugin.serialization](https://github.com/JetBrains/kotlin) | `2.4.10` | `2.4.20` |
| [org.jetbrains.compose.material3:material3](https://github.com/JetBrains/compose-multiplatform) | `1.12.0-alpha03` | `1.13.0-alpha01` |
| [org.jetbrains.compose.material3:material3-adaptive-navigation-suite](https://github.com/JetBrains/compose-multiplatform) | `1.12.0-alpha03` | `1.13.0-alpha01` |
| [org.jetbrains.compose.material3.adaptive:adaptive-navigation3](https://github.com/JetBrains/compose-multiplatform) | `1.3.0-beta02` | `1.3.0-rc01` |
| [io.insert-koin.compiler.plugin:io.insert-koin.compiler.plugin.gradle.plugin](https://github.com/InsertKoinIO/koin-compiler-plugin) | `1.1.0` | `1.2.1` |
| [io.insert-koin.compiler.plugin](https://github.com/InsertKoinIO/koin-compiler-plugin) | `1.1.0` | `1.2.1` |
| [io.ktor:ktor-bom](https://github.com/ktorio/ktor) | `3.5.2` | `3.6.0` |
| [org.robolectric:robolectric](https://github.com/robolectric/robolectric) | `4.16.1` | `4.17` |
| [io.github.takahirom.roborazzi:roborazzi](https://github.com/takahirom/roborazzi) | `1.73.0` | `1.74.0` |
| [io.github.takahirom.roborazzi:roborazzi-compose](https://github.com/takahirom/roborazzi) | `1.73.0` | `1.74.0` |
| [io.github.takahirom.roborazzi:roborazzi-compose-desktop](https://github.com/takahirom/roborazzi) | `1.73.0` | `1.74.0` |
| [io.github.